--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,9 +2,13 @@
 	"name": "@saas/auth",
 	"version": "0.0.0",
 	"private": true,
-	"main": "index.ts",
-	"types": "index.ts",
+	"main": "src/index.ts",
+	"types": "src/index.ts",
 	"devDependencies": {
 		"@saas/tsconfig": "workspace:*"
+	},
+	"dependencies": {
+		"@casl/ability": "^6.7.2",
+		"zod": "^3.24.1"
 	}
 }
